Tests: Convert Windows .bat scripts to Bash .sh scripts. Add copyright headers. [skip ci]